src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_cloc_block.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 2,
  "lloc": 1,
  "cloc": 4,
  "blank": 0,
  "sloc_average": 6.0,
  "ploc_average": 2.0,
  "lloc_average": 1.0,
  "cloc_average": 4.0,
  "blank_average": 0.0,
  "sloc_min": 6,
  "sloc_max": 6,
  "cloc_min": 4,
  "cloc_max": 4,
  "ploc_min": 2,
  "ploc_max": 2,
  "lloc_min": 1,
  "lloc_max": 1,
  "blank_min": 0,
  "blank_max": 0
}
