src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_cloc_hash.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 4,
  "ploc": 2,
  "lloc": 1,
  "cloc": 2,
  "blank": 0,
  "sloc_average": 4.0,
  "ploc_average": 2.0,
  "lloc_average": 1.0,
  "cloc_average": 2.0,
  "blank_average": 0.0,
  "sloc_min": 4,
  "sloc_max": 4,
  "cloc_min": 2,
  "cloc_max": 2,
  "ploc_min": 2,
  "ploc_max": 2,
  "lloc_min": 1,
  "lloc_max": 1,
  "blank_min": 0,
  "blank_max": 0
}
