src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_general_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 15,
  "ploc": 12,
  "lloc": 5,
  "cloc": 1,
  "blank": 2,
  "sloc_average": 5.0,
  "ploc_average": 4.0,
  "lloc_average": 1.6666666666666667,
  "cloc_average": 0.3333333333333333,
  "blank_average": 0.6666666666666666,
  "sloc_min": 6,
  "sloc_max": 15,
  "cloc_min": 0,
  "cloc_max": 1,
  "ploc_min": 6,
  "ploc_max": 12,
  "lloc_min": 3,
  "lloc_max": 5,
  "blank_min": 0,
  "blank_max": 2
}
