src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_html_island_ploc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 4,
  "ploc": 3,
  "lloc": 1,
  "cloc": 0,
  "blank": 1,
  "sloc_average": 4.0,
  "ploc_average": 3.0,
  "lloc_average": 1.0,
  "cloc_average": 0.0,
  "blank_average": 1.0,
  "sloc_min": 4,
  "sloc_max": 4,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 3,
  "ploc_max": 3,
  "lloc_min": 1,
  "lloc_max": 1,
  "blank_min": 1,
  "blank_max": 1
}
