src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_namespace_use_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 5,
  "ploc": 5,
  "lloc": 3,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 5.0,
  "ploc_average": 5.0,
  "lloc_average": 3.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 5,
  "sloc_max": 5,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 5,
  "ploc_max": 5,
  "lloc_min": 3,
  "lloc_max": 3,
  "blank_min": 0,
  "blank_max": 0
}
