src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_no_case_statement_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 11,
  "ploc": 11,
  "lloc": 6,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 11.0,
  "ploc_average": 11.0,
  "lloc_average": 6.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 11,
  "sloc_max": 11,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 11,
  "ploc_max": 11,
  "lloc_min": 6,
  "lloc_max": 6,
  "blank_min": 0,
  "blank_max": 0
}
